--- a/ComfortZoneExpanderWeb/Views/Shared/_Layout.cshtml
+++ b/ComfortZoneExpanderWeb/Views/Shared/_Layout.cshtml
@@ -5,110 +5,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - ComfortZoneExpander</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    @*<link rel="stylesheet" href="~/css/bootsWatchTheme.css" />*@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ComfortZoneExpanderWeb.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/bootsWatchTheme.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css" />
     <!-- Font Awesome -->
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     <!-- Google Fonts -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
 
 </head>
 <body>
     <header>
-        <!-- Navbar -->
-<nav class="navbar navbar-expand-lg bg-light navbar-light ">
-  <!-- Container wrapper -->
-  <div class="container-fluid">
-
-    <!-- Navbar brand -->
-    <a class="navbar-brand" href="#">ComfortZoneExpander</a>
-
-    <!-- Toggle button -->
-    <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <i class="fas fa-bars"></i>
-    </button>
-
-    <!-- Collapsible wrapper -->
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-@*        <!-- Link -->
-        <li class="nav-item">
-          <a class="nav-link" href="#">Sample link</a>
-        </li>*@
-
-      </ul>
-
-      <!-- Icons -->
-      <ul class="navbar-nav d-flex flex-row me-1">
-        <li class="nav-item me-3 me-lg-0">
-          <a class="nav-link" href="#">Sign in <i class="bi bi-box-arrow-in-right"></i></a>
-        </li>
-      </ul>
-
-    </div>
-  </div>
-  <!-- Container wrapper -->
-</nav>
-<!-- Navbar -->
     </header>
-    <section class="vh-100" style="background-color: #eee;">
-  <div class="container py-5 h-100">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col col-lg-9 col-xl-7">
-        <div class="card" style="border-radius: 15px;">
-          <div class="card-body p-5">
 
-            <div class="text-center mb-4 pb-2">
-              <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-quotes/bulb.webp"
-                alt="Bulb" width="100">
+    <main>
+        <section class="vh-100" style="background-color: royalblue;">
+            <div class="container py-5 h-100">
+                <div class="row d-flex justify-content-center align-items-center h-100">
+                    <div class="col col-lg-9 col-xl-7">
+                        <div class="card" style="border-radius: 15px;">
+                            <div class="card-body p-5">
+
+                                <div class="text-center mb-4 pb-2">
+                                    <img src="https://cdn-icons.flaticon.com/png/512/3965/premium/3965814.png?token=exp=1655739967~hmac=a3d03289fc1e0fa0af107970513a5ab4"
+                                         alt="Challenge" width="120">
+                                </div>
+
+                                <figure class="text-center mb-0">
+                                    @*<blockquote class="blockquote">*@
+                                        <p class="pb-2">
+                                            <i class="fa-xs text-primary"></i>
+                                            <span class="lead font-italic">
+                                            Organise an activity with someone you
+                                            <br />
+                                            have never socialised with
+                                            </span>
+                                            <i class="fa-xs text-primary"></i>
+                                        </p>
+                                    @*</blockquote>*@
+@*                                    <figcaption class="blockquote-footer mb-0">
+                                        Thomas Edison
+                                    </figcaption>*@
+                                </figure>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-
-            <figure class="text-center mb-0">
-              <blockquote class="blockquote">
-                <p class="pb-3">
-                  <i class="fas fa-quote-left fa-xs text-primary"></i>
-                  <span class="lead font-italic">Many of life's failures are people who did not realize how
-                    close they were to success when they gave up.</span>
-                  <i class="fas fa-quote-right fa-xs text-primary"></i>
-                </p>
-              </blockquote>
-              <figcaption class="blockquote-footer mb-0">
-                Thomas Edison
-              </figcaption>
-            </figure>
-
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+        </section>
+    </main>
     <div class="container">
-        <main role="main" class="pb-3">
+        <main role="main" class="pb-0">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="footer">
-        <div class="container">
-            &copy; 2022 - ComfortZoneExpander - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
+    <footer>
     </footer>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
-    <script
-  type="text/javascript"
-  src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.2.0/mdb.min.js"
-></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/4.2.0/mdb.min.js" type="text/javascript"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
