--- a/ComfortZoneExpanderWeb/Views/Shared/_Layout.cshtml
+++ b/ComfortZoneExpanderWeb/Views/Shared/_Layout.cshtml
@@ -24,12 +24,12 @@
             <div class="container py-5 h-100">
                 <div class="row d-flex justify-content-center align-items-center h-100">
                     <div class="col col-lg-9 col-xl-7">
-                        <div class="card" style="border-radius: 15px;">
+                        <div class="card" style="border-radius: 15px;" width="10px" >
                             <div class="card-body p-5">
 
                                 <div class="text-center mb-4 pb-2">
                                     <img src="https://cdn-icons.flaticon.com/png/512/3965/premium/3965814.png?token=exp=1655739967~hmac=a3d03289fc1e0fa0af107970513a5ab4"
-                                         alt="Challenge" width="120">
+                                         alt="Challenge" width="100">
                                 </div>
 
                                 <figure class="text-center mb-0">
@@ -41,6 +41,7 @@
                                             <br />
                                             have never socialised with
                                             </span>
+                                            <br />
                                             <i class="fa-xs text-primary"></i>
                                         </p>
                                     @*</blockquote>*@
