--- a/ComfortZoneExpanderWeb/Views/Shared/_Layout.cshtml
+++ b/ComfortZoneExpanderWeb/Views/Shared/_Layout.cshtml
@@ -17,14 +17,38 @@
 </head>
 <body>
     <header>
+        <!-- Navbar -->
+        <nav class="navbar navbar-expand-sm navbar-light bg-light">
+            <!-- Container wrapper -->
+            <div class="container">
+
+                <!-- Left links -->
+
+                <div class="d-flex align-items-center">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" >Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Register</a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+            <!-- Collapsible wrapper -->
+            </div>
+            <!-- Container wrapper -->
+        </nav>
+        <!-- Navbar -->
     </header>
 
-    <main>
-        <section class="vh-100" style="background-color: royalblue;">
+    <main class="bg-light">
+        <section class="vh-100">
             <div class="container py-5 h-100">
-                <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="row d-flex justify-content-center align-items-center h-200">
                     <div class="col col-lg-9 col-xl-7">
-                        <div class="card" style="border-radius: 15px;" width="10px" >
+                        <div class="card" style="border-radius: 15px;" width="100px">
                             <div class="card-body p-5">
 
                                 <div class="text-center mb-4 pb-2">
@@ -34,20 +58,21 @@
 
                                 <figure class="text-center mb-0">
                                     @*<blockquote class="blockquote">*@
-                                        <p class="pb-2">
-                                            <i class="fa-xs text-primary"></i>
-                                            <span class="lead font-italic">
+                                    <p class="pb-2">
+                                        <i class="fa-xs text-primary"></i>
+                                        <span class="lead font-italic">
                                             Organise an activity with someone you
                                             <br />
                                             have never socialised with
-                                            </span>
-                                            <br />
-                                            <i class="fa-xs text-primary"></i>
-                                        </p>
+                                        </span>
+                                        <br />
+                                        <i class="fa fa-refresh"></i>
+                                    </p>
                                     @*</blockquote>*@
-@*                                    <figcaption class="blockquote-footer mb-0">
-                                        Thomas Edison
+                                    @*                                    <figcaption class="blockquote-footer mb-0">
+                                    Thomas Edison
                                     </figcaption>*@
+
                                 </figure>
 
                             </div>
